<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mortgage</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_mortgage"></string>
    <string name="hello_principal"></string>
    <string name="tv_principal">Principal</string>
    <string name="tv_rate">Rate (5.5=5.5%)</string>
    <string name="tv_loanlength">Loan Length</string>
    <string name="calc_button">Calculate</string>
    <string name="clear_button">Clear</string>
    <string name="back_button">Back</string>
    <string name="total_amount">Total Amount $0.0</string>
    <string name="monthly_payment">Monthly Payment $0.0</string>
    <string name="payments_made">Payments Made</string>
    <string name="remain_prin">Remaining Principal $0.0</string>
    <string name="new_prin">Calculate new principal</string>
    <string name="action_settings">Settings</string>
    <string name="prin_class">Principal</string>

</resources>
