<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/bkgrnd_red"
    tools:context="edu.niu.cs.lkerschner.mortgage.MortgageActivity" >

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/hello_mortgage" />

    <TextView
        android:id="@+id/tvPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvHeader"
        android:layout_alignStart="@+id/tvHeader"
        android:layout_below="@+id/tvHeader"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="26dp"
        android:text="@string/tv_principal" />

    <EditText
        android:id="@+id/etPrinAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvPrincipal"
        android:layout_alignLeft="@+id/etRate"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignStart="@+id/etRate"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/tvRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvPrincipal"
        android:layout_alignStart="@+id/tvHeader"
        android:layout_below="@+id/tvPrincipal"
        android:layout_marginTop="26dp"
        android:text="@string/tv_rate"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvRate"
        android:layout_alignBottom="@+id/tvRate"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/tvRate"
        android:layout_toEndOf="@+id/tvRate" 
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

 	<TextView
 	    android:id="@+id/tvLoanLength"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_alignLeft="@+id/tvRate"
 	    android:layout_alignStart="@+id/tvHeader"
 	    android:layout_below="@+id/etRate"
 	    android:layout_marginTop="24dp"
 	    android:text="@string/tv_loanlength"
 	    android:textAppearance="?android:attr/textAppearanceMedium" />

 	<EditText
 	    android:id="@+id/etLoanLength"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_alignBaseline="@+id/tvLoanLength"
 	    android:layout_alignBottom="@+id/tvLoanLength"
 	    android:layout_alignLeft="@+id/etRate"
 	    android:layout_alignStart="@+id/etRate" 
 	    android:layout_alignRight="@+id/etRate"
 	    android:layout_alignEnd="@+id/etRate" 
 	    android:ems="10"
 	    android:inputType="number" />

 	<Button
 	    android:id="@+id/calcBtn"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_alignRight="@+id/tvLoanLength"
 	    android:layout_alignEnd="@+id/tvLoanLength"
 	    android:layout_below="@+id/etLoanLength"
 	    android:layout_marginTop="15dp"
 	    android:onClick="mortgagecalc"
 	    android:text="@string/calc_button" />

 	<Button
 	    android:id="@+id/clearBtn"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_alignBaseline="@+id/calcBtn"
 	    android:layout_alignBottom="@+id/calcBtn"
 	    android:layout_alignRight="@+id/etLoanLength"
 	    android:layout_alignEnd="@+id/etLoanLength"
 	    android:layout_marginRight="30dp"
 	    android:layout_marginEnd="30dp"
 	    android:onClick="clearall"
 	    android:text="@string/clear_button" />

 	<TextView
 	    android:id="@+id/tvMonthlyPayment"
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    android:layout_alignLeft="@+id/calcBtn"
 	    android:layout_alignStart="@+id/calcBtn"
 	    android:layout_below="@+id/calcBtn"
 	    android:layout_marginTop="50dp"
 	    android:text="@string/monthly_payment"
 	    android:textAppearance="?android:attr/textAppearanceMedium" />

 	<TextView
 	    android:id="@+id/tvTotalAmt"
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    android:layout_alignLeft="@+id/tvMonthlyPayment"
 	    android:layout_alignStart="@+id/tvMonthlyPayment"
 	    android:layout_below="@+id/tvMonthlyPayment"
 	    android:layout_marginTop="40dp"
 	    android:text="@string/total_amount"
 	    android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
