<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/bkgrnd_blue"
    tools:context="edu.niu.cs.lkerschner.mortgage.MortgageActivity" >

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/hello_principal" />

    <TextView
        android:id="@+id/tvPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvHeader"
        android:layout_alignStart="@+id/tvHeader"
        android:layout_below="@+id/tvHeader"
        android:layout_marginTop="26dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tv_principal" />

    <EditText
        android:id="@+id/etPrinAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvPrincipal"
        android:layout_alignLeft="@+id/etRate"
        android:layout_alignStart="@+id/etRate"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/tvRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvPrincipal"
        android:layout_alignStart="@+id/tvHeader"
        android:layout_below="@+id/tvPrincipal"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/tv_rate"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvRate"
        android:layout_alignBottom="@+id/tvRate"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_toEndOf="@+id/tvRate"
        android:layout_toRightOf="@+id/tvRate"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

 	<TextView
 	    android:id="@+id/tvLoanLength"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_alignLeft="@+id/tvRate"
 	    android:layout_alignStart="@+id/tvHeader"
 	    android:layout_below="@+id/etRate"
 	    android:layout_marginTop="30dp"
 	    android:text="@string/tv_loanlength"
 	    android:textAppearance="?android:attr/textAppearanceMedium" />

 	<EditText
 	    android:id="@+id/etLoanLength"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_alignBaseline="@+id/tvLoanLength"
 	    android:layout_alignBottom="@+id/tvLoanLength"
 	    android:layout_alignLeft="@+id/etRate"
 	    android:layout_alignStart="@+id/etRate" 
 	    android:layout_alignRight="@+id/etRate"
 	    android:layout_alignEnd="@+id/etRate" 
 	    android:ems="10"
 	    android:inputType="number" />
 	
 	<TextView
 	    android:id="@+id/tvPmntsMade"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_alignLeft="@+id/tvLoanLength"
 	    android:layout_alignStart="@+id/tvLoanLength"
 	    android:layout_below="@+id/tvLoanLength"
 	    android:layout_marginTop="30dp"
 	    android:text="@string/payments_made"
 	    android:textAppearance="?android:attr/textAppearanceMedium" />

 	<Button
 	    android:id="@+id/clearBtn"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_alignBaseline="@+id/calcBtn"
 	    android:layout_alignBottom="@+id/calcBtn"
 	    android:layout_alignRight="@+id/etLoanLength"
 	    android:layout_alignEnd="@+id/etLoanLength"
 	    android:layout_marginRight="30dp"
 	    android:layout_marginEnd="30dp"
 	    android:onClick="clearall"
 	    android:text="@string/clear_button" />

 	<TextView
 	    android:id="@+id/tvRemainPrin"
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    android:layout_alignLeft="@+id/calcBtn"
 	    android:layout_alignStart="@+id/calcBtn"
 	    android:layout_below="@+id/calcBtn"
 	    android:layout_marginTop="30dp"
 	    android:text="@string/remain_prin"
 	    android:textAppearance="?android:attr/textAppearanceMedium" />

 	<Button
 	    android:id="@+id/calcBtn"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_alignEnd="@+id/tvPmntsMade"
 	    android:layout_alignLeft="@+id/tvPmntsMade"
 	    android:layout_alignStart="@+id/tvPmntsMade" 
 	    android:layout_alignRight="@+id/tvLoanLength"
 	    android:layout_below="@+id/tvPmntsMade"
 	    android:layout_marginTop="30dp"
 	    android:onClick="principalcalc"
 	    android:text="@string/calc_button" />

 	<EditText
 	    android:id="@+id/etPaymentsMade"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_alignBaseline="@+id/tvPmntsMade"
 	    android:layout_alignBottom="@+id/tvPmntsMade"
 	    android:layout_alignLeft="@+id/etRate"
 	    android:layout_alignStart="@+id/etRate" 
 	    android:layout_alignRight="@+id/etRate"
 	    android:layout_alignEnd="@+id/etRate" 
 	    android:ems="10"
 	    android:inputType="number" />

 	<Button
 	    android:id="@+id/backBtn"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_below="@+id/tvRemainPrin"
 	    android:layout_marginTop="18dp"
 	    android:layout_toRightOf="@+id/calcBtn"
 	    android:layout_toEndOf="@+id/calcBtn"
 	    android:onClick="GoBack" 
 	    android:text="@string/back_button"/>
    
</RelativeLayout>
